[gd_scene load_steps=17 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/SaveScreen/5 sin t√≠tulo_20220522143403.png" type="Texture" id=1]
[ext_resource path="res://Main Resources/Fuentes/game_over.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Escenas/Interfaces/Pausa/SaveScreen.gd" type="Script" id=3]
[ext_resource path="res://Main Resources/Fuentes/Coder's Crux.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Main Resources/Sonidos/Interfaz/PRESS START.wav" type="AudioStream" id=5]
[ext_resource path="res://Main Resources/Sprites/otros/blurbackground.png" type="Texture" id=6]

[sub_resource type="Shader" id=20]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 20 )
shader_param/lod = 5.0

[sub_resource type="DynamicFont" id=9]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=18]
action = "ui_select"
pressed = true

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="Animation" id=13]
resource_name = "apear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("background2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.509804 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("window:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1035, 44 ), Vector2( 587, 44 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1156, 55 ), Vector2( 716, 55 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Nivel:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1159, 78 ), Vector2( 719, 78 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Tittle:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1034.5, 227 ), Vector2( 586.5, 227 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hora:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1035, 189 ), Vector2( 587, 189 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hora:rect_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1.03527 ),
"update": 0,
"values": [ Vector2( 406, 36 ), Vector2( 406, 36 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Nivel:rect_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 147, 34 ), Vector2( 147, 34 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SaveButton:rect_position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1196, 286 ), Vector2( 742, 286 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Regresarbttn:rect_position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 1194, 317 ), Vector2( 740, 317 ) ]
}

[node name="SaveScreen" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 3 )

[node name="background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="background2" type="TextureRect" parent="."]
pause_mode = 2
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="TextureRect" parent="."]
use_parent_material = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = -256.0
margin_right = 483.0
margin_bottom = 255.0
texture = ExtResource( 1 )

[node name="Tittle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 74.5
margin_top = -73.0
margin_right = 485.5
margin_bottom = -55.0
custom_fonts/font = SubResource( 9 )
text = "Dominic vs Exbor"
align = 1
valign = 1

[node name="Hora" type="Label" parent="."]
anchor_left = 1.01074
anchor_top = 0.315
anchor_right = 1.40723
anchor_bottom = 0.375
margin_left = -447.998
margin_right = -448.004
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 204.0
margin_top = -245.0
margin_right = 351.0
margin_bottom = -211.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Nivel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 207.0
margin_top = -222.0
margin_right = 354.0
margin_bottom = -188.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="SaveButton" type="Button" parent="."]
margin_left = 742.0
margin_top = 286.0
margin_right = 835.0
margin_bottom = 315.0
focus_neighbour_left = NodePath("../Regresarbttn")
focus_neighbour_right = NodePath("../Regresarbttn")
mouse_filter = 2
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Guardar"
flat = true

[node name="Regresarbttn" type="Button" parent="."]
margin_left = 740.0
margin_top = 317.0
margin_right = 833.0
margin_bottom = 346.0
focus_neighbour_left = NodePath("../SaveButton")
focus_neighbour_right = NodePath("../SaveButton")
mouse_filter = 2
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
shortcut = SubResource( 19 )
text = "Volver"
flat = true

[node name="PRESSSAVE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Appearanim" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "apear"
anims/apear = SubResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="focus_entered" from="SaveButton" to="." method="_on_SaveButton_focus_entered"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="focus_entered" from="Regresarbttn" to="." method="_on_Regresarbttn_focus_entered"]
[connection signal="pressed" from="Regresarbttn" to="." method="_on_Regresarbttn_pressed"]
